# wireless_logger

./: .gitmodules  README.md
hw/: ASSEMBLY.md
hw/rev2/: bluetooth.sch  bluetooth_nordic.sch  oled.sch  power.sch  rf.sch  sensors.sch  stm32f4.sch  wireless_logger.cmp  wireless_logger.kicad_pcb  wireless_logger.net  wireless_logger.pro  wireless_logger.sch
hw/rev2/gerber/: wireless_logger-B_Cu.gbl  wireless_logger-B_Mask.gbs  wireless_logger-B_SilkS.gbo  wireless_logger-Edge_Cuts.gbr  wireless_logger-F_Cu.gtl  wireless_logger-F_Mask.gts  wireless_logger-F_SilkS.gto  wireless_logger-GND_PLANE.g2l  wireless_logger-Inner2_Cu.g3l  wireless_logger.drl
hw/rev2/lib/: eagle.mod  mcgill.mod  oshw.mod  wi_logger.lib  wi_logger.mod
logger_gui/: cmdsupport.py  gui.py  logger_link.py  params.py  parser.py
sw/: CMakeLists.txt  Doxyfile.in  mkmat.py  parse.py  plot.py  toolchain.cmake
sw/keil/: imu_logger.uvproj
sw/src/: button.c  button.h  fs_hal.c  fs_hal.h  i2c.c  i2c.h  logger.c  logger.h  lpry.c  lpry.h  lps001.c  lps001.h  lsm303.c  lsm303.h  main.c  rtc.c  rtc.h  sdio.c  sdio.h  sdio_ll.c  sdio_ll.h  sensor_config.h  toolchain.h
sw_imu/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  start.gdb  start.gdb.in  toolchain.cmake  toolchain_win32.cmake
sw_imu/coffee/: cfs-coffee.c  cfs-coffee.h  cfs-posix.c  cfs-ram.c  contiki.h
sw_imu/imu/: button.cpp  button.h  cc1101.cpp  cc1101.h  clock_mgr.c  clock_mgr.h  datasource.cpp  datasource.h  eventlog.cpp  eventlog.h  ext.h  framebuffer.cpp  framebuffer.h  framebuffer_spec.cpp  guardian.cpp  guardian.h  guardian_spec.cpp  i2c.cpp  i2c.h  imu.cpp  imu.h  imu_docs.h  imu_math.h  l3gd20.cpp  l3gd20.h  lps331.cpp  lps331.h  ltc3559.cpp  ltc3559.h  mag3110.cpp  mag3110.h  mma8452q.cpp  mma8452q.h  mma845x.cpp  mma845x.h  mt29fxg01.cpp  mt29fxg01.h  platform.cpp  rtc.cpp  rtc.h  (+10 more)
sw_imu/imu/graphics/: comicsans4.cpp  comicsans4.h  courier3.cpp  courier3.h  graphic.cpp  graphic.h  mediumfont.cpp  mediumfont.h  smallfont.cpp  smallfont.h
sw_imu/os/ports/GCC/ARMCMx/: chcore_v7m.c  crt0.c
sw_imu/os/ports/GCC/ARMCMx/STM32F4xx/: vectors.c
sw_imu/os/ports/GCC/ARMCMx/STM32F4xx/ld/: STM32F405xG.ld
sw_imu/src/: acquisition.cpp  acquisition.h  main.cpp  power_management.cpp  power_management.h  rng.h  toolchain.h
sw_imu/src/platform/: board.c  board.h  cfs-coffee-arch.cpp  cfs-coffee-arch.h  chconf.h  flogfs_conf.h  flogfs_conf_implement.h  halconf.h  mcuconf.h  platform.cpp  platform.h  platform_docs.h  platform_usbserial.h
sw_imu/src/platform/bb/: board.h  halconf.h  mcuconf.h  platform.cpp  platform.h
sw_imu/src/platform/sf/: board.h  halconf.h  mcuconf.h  platform.cpp  platform.h
sw_imu/src/ui/: eventlogmenu.cpp  eventlogmenu.h  filemenu.cpp  filemenu.h  mainmenu.cpp  mainmenu.h  menu.cpp  menu.h  menuscreen.h  rngscreen.cpp  rngscreen.h  sensor_view.cpp  sensor_view.h  sensorlog.cpp  sensorlog.h  testmenu.cpp  testmenu.h  tests.cpp  tests.h  ui.cpp  ui.h  ui_docs.h  usbfile.cpp  usbfile.h  usbscreen.cpp  usbscreen.h  usbterm.cpp  usbterm.h
sw_imu/yaffs/direct/: yaffs_guts.c  yaffs_guts.h  yaffs_yaffs2.c
